force-app/main/default/objects/OrderPaymentSummary/fields/Authorized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Amount__c</fullName>
    <label>Special Order Authorized Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>