force-app/main/default/objects/OrderPaymentSummary/fields/Captured_Amount__c.field-meta.xml
<CustomField>
    <fullName>Captured_Amount__c</fullName>
    <label>Special Order Captured Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>