force-app/main/default/objects/OrderPaymentSummary/fields/Special_Order_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_Transaction_Id__c</fullName>
    <label>Special Order Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>