force-app/main/default/objects/OrderPaymentSummary/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <formula>LastPaymentGatewayLog.GatewayRefNumber</formula>
    <label>Transaction Id</label>
    <type>Text</type>
</CustomField>